// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`talon/routerContainer renders no route 1`] = `
<talon-router-container>
  #shadow-root(open)
</talon-router-container>
`;

exports[`talon/routerContainer renders route 1`] = `
<talon-router-container>
  #shadow-root(open)
    About: 
     
    Hello
     
</talon-router-container>
`;

exports[`talon/routerContainer renders route with empty route params 1`] = `
<talon-router-container>
  #shadow-root(open)
    About: 
     
    Hello
     
</talon-router-container>
`;

exports[`talon/routerContainer renders route with route params 1`] = `
<talon-router-container>
  #shadow-root(open)
    About: 
    ABC123
     
    Hello
     
</talon-router-container>
`;
